<resources>
    <string name="app_name">MyLogin</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submiit">Submiit</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="university_bazaar_register">University Bazaar - Register</string>
    <string name="please_enter_the_following_information">Please enter the following information:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_at_least_8_characters">ID (at least 8 characters)</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="univerisity_bazaar">Univerisity Bazaar</string>
    <string name="login">Login</string>
    <string name="user_id">User Id</string>
    <string name="payment">Payment</string>
    <string name="sales">Sales</string>
    <string name="exchange">Exchange</string>
    <string name="clubs">Clubs</string>
    <string name="paymenticon">paymentIcon</string>
    <string name="searchicon">searchIcon</string>
    <string name="clubsicon">clubsIcon</string>
    <string name="salesicon">salesIcon</string>
    <string name="communication">Communication</string>
    <string name="commicon">commIcon</string>
    <string name="exchangeicon">exchangeIcon</string>

</resources>